# email-investigation-tool

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  dashboard.py  file_generator.py  gpg_manager.py  imap_client.py  main.py  network_analyzer.py  network_monitor.py  pyproject.toml  security_demo.py  smtp_client.py  themes.py
